this banner sommosa

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     .eb{
         font-family: "EB Garamond", serif;
     }
+    
 .hero{
   background: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%,rgba(16, 16, 16, 0) 100%),url(../images/banner.png);
     max-height: 550px;
@@ -195,6 +196,11 @@
           </div>
     </div>
   </section>
+
+  <!-- second hero section  -->
+   <section class="w-11/12 mx-auto" >
+
+   </section>
 </main>
 
 
