--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     }
     
 .hero{
-  background: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%,rgba(16, 16, 16, 0) 100%),url(../images/banner.png);
+  /* background: linear-gradient(0.00deg, rgb(16, 16, 16) -19.5%,rgba(16, 16, 16, 0) 100%),url(../images/banner.png);  */
+    background-image: url(images/banner.png);
     max-height: 550px;
     background-repeat: no-repeat;
     background-size:cover;
