--- a/index.html
+++ b/index.html
@@ -346,10 +346,196 @@
 
     </div>
    </section>
+
+<!-- frequently section  -->
+
+<section class="mb-24 w-11/12 mx-auto">
+
+  <h1 class="text-center eb text-4xl font-bold mb-6">Frequently Asked Any Questions</h1>
+  <div class="text-center mb-6">
+    <p class="text-center text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have </p>
+  <span class="text-center text-gray-400">suffered alteration in some form, by injected humour.</span>
+  </div>
+
+  <div class=" flex flex-col lg:flex-row flex-col-reverse gap-6 mt-10">
+
+    <div class="flex flex-col gap-8 lg:w-1/2 mt-10">
+
+      <div class="collapse collapse-plus  rounded-lg bg-base-200">
+        <input type="radio"  class="lg:h-24 md:h-24"  name="my-accordion-3" checked="checked" />
+        <div class="collapse-title text-xl eb font-medium">What are the differences between criminal law and civil law?</div>
+        <div class="collapse-content ">
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, .
+            
+             </p>
+        </div>
+      </div>
+  
+      <div class="collapse collapse-plus rounded-lg bg-base-200">
+        <input type="radio"  class="lg:h-24 md:h-24"  name="my-accordion-3" />
+        <div class="collapse-title text-xl eb font-medium">Are application fee waivers available?</div>
+        <div class="collapse-content">
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+        </div>
+      </div>
+  
+      <div class="collapse collapse-plus rounded-xl bg-base-200">
+        <input type="radio" class="lg:h-24 md:h-24" name="my-accordion-3" />
+        <div class="collapse-title text-xl eb font-medium">What is the role of a judge in a courtroom trial?</div>
+        <div class="collapse-content">
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+        </div>
+      </div>
+  
+      <div class="collapse collapse-plus rounded-xl bg-base-200">
+        <input type="radio"  class="lg:h-24 md:h-24"  name="my-accordion-3" />
+        <div class="collapse-title eb text-xl font-medium">What are the main objectives of family law?</div>
+        <div class="collapse-content">
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+        </div>
+      </div>
+
+
+    </div>
+<div class=" lg:w-1/2">
+  <img src="images/faq.png" alt="">
+</div>
+
+  </div>
+</section>
+
+<!-- Contact us section  -->
+<section class="my-24 w-11/12 mx-auto">
+  <h1 class="text-center eb text-4xl font-bold mb-6">Contact With Us</h1>
+  <div class="text-center mb-6">
+    <p class="text-center text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have </p>
+  <span class="text-center text-gray-400">suffered alteration in some form, by injected humour.</span>
+  </div>
+
+  <div class="flex flex-col lg:flex-row flex-col-reverse mt-20 gap-8 ">
+
+    <div class="grid grid-cols-2 bg-[#F3F3F3] lg:w-1/2 rounded-lg">
+
+<div class=" flex flex-col justify-center items-center gap-2 lg:gap-4 lg:py-16 py-8 border border-t-0 border-l-0 ">
+  <img class="" src="images/location.png" alt="">
+  <h1 class="eb text-2xl font-bold">Address</h1>
+  <div class="text-gray-400 text-center text-xs lg:text-[16px]">
+    <p >A108 Adam Street,</p>
+    <p> New York, NY 535022</p>
+  </div>
+</div>
+
+
+<div class=" flex flex-col justify-center items-center gap-2 lg:gap-4 lg:py-16  py-8 border-b">
+  <img class="" src="images/call.png" alt="">
+  <h1 class="eb text-2xl font-bold">Call Us</h1>
+  <div class="text-gray-400 text-center text-xs lg:text-[16px]">
+    <p>+88 01750 00 00 00
+     </p>
+    <p>+88 01750 00 00 00</p>
+  </div>
+</div>
+
+<div class=" border-r flex flex-col justify-center items-center gap-2 lg:gap-4 lg:py-16  py-8 ">
+  <img class="" src="images/email.png" alt="">
+  <h1 class="eb text-2xl font-bold">Email Us</h1>
+  <div class="text-gray-400 text-center text-xs lg:text-[16px]">
+    <p>info@gmail.com
+     </p>
+    <p>  info@gmail.com</p>
+  </div>
+</div>
+
+
+<div class=" flex flex-col justify-center items-center gap-2 lg:gap-4 lg:py-16  py-8 ">
+  <img class="" src="images/time.png" alt="">
+  <h1 class="eb text-2xl font-bold text-center">Working</h1>
+  <div class="text-gray-400 text-center text-xs lg:text-[16px]">
+    <p>Mon-Fri: 9AM to 5PM
+      </p>
+    <p> Sunday: 9AM to 1 PM</p>
+  </div>
+</div>
+
+
+</div>
+
+<div class="space-y-7 lg:w-1/2">
+
+  <input type="text" placeholder="Your Name" class="input input-bordered w-full lg:h-[72px] bg-[#f3f3f3] " />
+
+  <input type="text" placeholder="Your Email" class="input input-bordered w-full lg:h-[72px] bg-[#f3f3f3] " />
+
+  <input type="text" placeholder="Subject" class="input input-bordered w-full lg:h-[72px] bg-[#f3f3f3] " />
+
+  <textarea class="textarea textarea-bordered bg-[#f3f3f3]  w-full lg:h-[168px] h-32" placeholder="Your Message"></textarea>
+<button class="btn w-full bg-nav-btn lg:h-[72px] text-white font-bold text-xl">Send Message</button>
+</div>
+
+  </div>
+
+</section>
+
+
 </main>
 
 
+<footer class="footer bg-base-200 text-base-content text-white bg-black p-10 ">
+  <nav class=" lg:ml-48 space-y-4">
+    <h6 class=" "><img  src="images/logo.png" alt=""></h6>
+    <p class="w-[260px] text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+    
+  </nav>
+  <nav class="space-y-4">
+    <h6 class=" text-white eb font-bold text-2xl">Usefull Link</h6>
+    <ul class="text-gray-400 space-y-2">
+      <li>Home</li>
+      <li>About</li>
+      <li>Cases</li>
+      <li>Blog</li>
+      <li>Contact Us</li>
+    </ul>
+  </nav>
+  <nav class="space-y-4">
+    <h6 class="text-white eb font-bold text-2xl">Contact Now</h6>
+    <div class="text-gray-400 space-y-2">
+      <div>
+        <p>555 4th 5t NW, Washington</p>
+        <p> DC 20530, United States </p>
 
+      </div>
+      <div>
+       <p>+88 01750 000 000</p>
+       <p>+88 01750 000 000</p>
+
+      </div>
+      <div>
+     <p>info@gmail.com
+      </p>
+
+      <p>info@gmail.com</p>
+      </div>
+    </div>
+  </nav>
+
+  <form class="space-y-4">
+    <h6 class="text-white eb font-bold text-2xl">Subscribe</h6>
+    <fieldset class="form-control w-80 space-y-2">
+
+      <div class="text-gray-400 mb-2">
+        <p>Subscribe for our latest & <br> Articles. We Won’t Give You <br> Spam Mails</p>
+      </div>
+
+      <div class="join">
+        <input
+          type="text"
+          placeholder="Email Address"
+          class="input input-bordered join-item" />
+        <button class="btn btn-primary join-item rounded-lg bg-nav-btn"><img src="images/Frame.png" alt=""></button>
+      </div>
+    </fieldset>
+  </form>
+</footer>
 
 
 </body>
