--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         <input
           type="text"
           placeholder="Email Address"
-          class="input input-bordered join-item w-9/12" />
+          class="input input-bordered join-item w-9/12 text-black eb" />
         <button class="btn btn-primary join-item rounded-lg bg-nav-btn"><img src="images/Frame.png" alt=""></button>
       </div>
     </fieldset>
