I thing all is done

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     <input
   type="text"
   placeholder="Type here"
-  class="input input-bordered input-info w-full max-w-xs" />
+  class="input input-bordered input-info w-full max-w-xs text-black eb" />
 
   <button class="btn bg-nav-btn text-white ">Search</button>
   </div>
